<resources>
    <string name="app_name">Donate &amp; Save Life</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>

    <string name="signin">SignIn</string>
    <string name="new_user_signup">New User ? SignUp</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start">SignUp To Start</string>
    <string name="full_name">Full Name</string>

    <string name="age">Age</string>
    <string name="go">Go</string>
    <string name="already_have_account_login">Already Have Account? LogIn</string>
    <string name="blood_group">blood_group</string>
    <string name="donate_save_life"><![CDATA[Donate & Save Life]]></string>
    <string name="your_details_will_be_public_to_the_community_by_using_this_app_you_also_need_to_pledge_to_be_a_donor_to_help_those_who_are_in_need">Your Details will be public to the community, by using this app you also need to pledge to be a donor to help those who are in need.</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="mobile_number_verifiable">Mobile Number(Verifiable)</string>
    <string name="blood_group1">Blood Group</string>
    <string name="become_a_donor">Become a donor</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="make_request">Make Request</string>
    <string name="choose_location">Choose Location</string>
    <string name="write_an_heartfelt_message_and_add_an_image_for_an_community_somebody_will_definitely_help_you">Write an Heartfelt message and add an image for an community, somebody will definitely help you</string>
    <string name="choose_image">Choose image</string>
    <string name="post_request">Post Request</string>
    <string name="non_government_organization">Non-Government Organization</string>
    <string name="plasma_and_organ_donation">PLASMA AND ORGAN DONATION</string>
    <string name="description">Description...</string>
    <string name="publish_event">Publish Event</string>
    <string name="address">Address</string>
    <string name="event_title">Event Title</string>

    <string name="get_location">Get Location</string>

</resources>
