<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    tools:context=".Activities.MakeRequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/write_an_heartfelt_message_and_add_an_image_for_an_community_somebody_will_definitely_help_you"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:cursorVisible="false"
                android:gravity="top"
                android:hint="Message..."
                android:padding="10dp"
                android:maxLines="10"
                android:minLines="6"
                android:textAlignment="gravity"
                android:textColorHint="#000000"

                android:textSize="18sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <ImageView
                android:id="@+id/post_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_image_24"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/choose_text"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="@string/choose_image"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#F4511E"
            android:text="@string/post_request"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>